add images and for index

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+    background-color: #ececec;
+}
+
+p {
+    color: #788692;
+    padding: 10px;
+}
+
 .title {
     color: #63a8a4;
     font-family: "Times New Roman", Times, serif;
@@ -5,10 +14,39 @@
     font-size: 40px;
 }
 
+.box {
+    height: 400px;
+    margin-top: 40px;
+    padding: 20px;
+    color: #fff;
+    background: white;
+}
 
-.navbar-brand {
+
+.navbar {
+    background-color: tomato;
+}
+
+.navigation .navbar-brand {
     background-color: #63a8a4;
+    color: white;
     padding: 10px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
+
+.navigation .nav-item {
+    display: right;
+}
+
+.index_image {
+    float: left;
+    width: 30%;
+    height: 50%;
+}
+
+.thumbnail {
+    width: 50%;
+    height: 40%;
+}
+
