--- a/style.css
+++ b/style.css
@@ -7,25 +7,13 @@ p {
     padding: 10px;
 }
 
-.title {
+h2 {
     color: #63a8a4;
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
-    font-size: 40px;
+    text-align: center;
 }
 
-.box {
-    height: 400px;
-    margin-top: 40px;
-    padding: 20px;
-    color: #fff;
-    background: white;
-}
-
-
-.navbar {
-    background-color: tomato;
-}
 
 .navigation .navbar-brand {
     background-color: #63a8a4;
@@ -33,10 +21,35 @@ p {
     padding: 10px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
+
 }
 
 .navigation .nav-item {
     display: right;
+}
+
+.title {
+    color: #63a8a4;
+    font-family: "Times New Roman", Times, serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.container {
+    margin-top: 40px;
+}
+
+.box {
+    background: white;
+    /* margin-top: 40px; */
+    padding: 20px;
+}
+
+.box1 {
+    background: white;
+        /* margin-top: 40px; */
+    padding: 20px;
+    height: 360px;
 }
 
 .index_image {
@@ -50,3 +63,13 @@ p {
     height: 40%;
 }
 
+.chart_visual {
+    width: 100%;
+    height: 120%;
+}
+
+.comp_image {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 50px;
+}
